Modified Runner.java to process CSV and JSON Files to create Statistics Code changes were tested in INTELLIJ CE IDE

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -20,7 +20,7 @@
 
     <dependencies>
         <!-- These are example dependencies that you can use - feel free to swap them for any other library that does the job! -->
-        <!--
+
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-csv</artifactId>
@@ -31,7 +31,11 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
-        -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
 
 
 
